[tool.poetry]
name = "rl_es"
version = "0.1.0"
description = ""
authors = ["Victor <jvgfs@cesar.org.br>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.25.2"
torch = "^1.12.1"
tensorboard = "^2.10.0"
tensorboardX = "^2.5.1"
ptan = "0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
